# reinforcement-learning-based-nbody-timestepping

./: .gitignore  README.md  pyproject.toml
configs/: big_body_small_body_circular_euler_fixed_timestep.json  big_body_small_body_circular_leapfrog_1_fixed_timestep.json  big_body_small_body_circular_leapfrog_2_fixed_timestep.json  big_body_small_body_circular_velocity_condition.json  big_body_small_body_e_0.95_agent_learned_timestep.json  big_body_small_body_e_0.95_agent_learned_timestep_energy_weighted.json  big_body_small_body_e_0.95_euler_fixed_timestep.json  big_body_small_body_e_0.95_leapfrog_1_fixed_timestep.json  big_body_small_body_e_0.95_leapfrog_2_fixed_timestep.json  big_body_small_body_velocity_condition.json  two_body_1pc_circular_base.json  two_body_euler_circular_fixed_timestep.json  two_body_leapfrog_1_circular_fixed_timestep.json  two_body_leapfrog_2_circular_fixed_timestep.json
ics/: big_body_small_body.json  big_body_small_body_e_0.95.json  two_body_1pc_circular.json  two_body_circular.json
nbody_timestepping/: agent.py  environment.py  particle.py  run.py  run_simple.py  run_velocity_condition.py  train.py
notebooks/: orbital_parameters.ipynb  two_body_orbits_q_learning.ipynb
scripts/: generate_ics_from_json.py
