[tool.poetry]
name = "nbody-timestepping"
version = "0.1.0"
description = "Experimentation with reinforcement learning and n-body timestepping"
authors = ["Jake Bauer <j.bauer@nazo.ai>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.1"
numpy = "^2.1.2"
h5py = "^3.12.1"
black = "^24.8.0"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
